Quick fix for getting-started Android

--- a/src/fragments/start/getting-started/android/setup.mdx
+++ b/src/fragments/start/getting-started/android/setup.mdx
@@ -52,6 +52,8 @@ Amplify for Android is distributed as an Apache Maven package. In this section, 
    dependencies {
        implementation 'com.amplifyframework:aws-api:ANDROID_VERSION'
        implementation 'com.amplifyframework:aws-datastore:ANDROID_VERSION'
+       implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+       implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
    }
    ```
 
